tests/ui/parser/issues/issue-62546.rs
pub t(#
//~^ ERROR missing `fn` or `struct` for function or struct definition
//~ ERROR this file contains an unclosed delimiter
